[package]
name = "tcp_kprobe-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
tcp_kprobe-common = { path = "../tcp_kprobe-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "tcp_kprobe"
path = "src/main.rs"
